Fix for invisible text on Chrome/Chromium browser drop-down menus

--- a/Modern Narrow Dark.css
+++ b/Modern Narrow Dark.css
@@ -115,6 +115,11 @@ select,
     background-color: #ffffff20;
 }
 
+/* Fix for invis. text on Chrome/Chromium browser drop-down menus */
+option {
+    color: black;
+}
+
 /* Comment thread indicators */
 .comment-depth-odd {
     border-color: #ffffff30;
